--- a/trainings/my-skills/my-skills-sankey.ipynb
+++ b/trainings/my-skills/my-skills-sankey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "2  Matlab  Python     25  gray"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,33 +190,45 @@
    "source": [
     "#### Nodes position\n",
     "\n",
-    "in x position 2011 will represent 0.01 and 2023 will represent 1"
+    "x_year will reflect the year the last time the language has been used"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = [\n",
-    "0.01, # C     \n",
-    "0.2 , # C     \n",
-    "0.6 , # GScript   \n",
-    "1   , # GScript   \n",
-    "1   , # HTML/CSS  \n",
-    "1   , # JavaScript\n",
-    "0.15, # Matlab    \n",
-    "1   , # Matplotlib\n",
-    "1   , # Numpy     \n",
-    "1   , # Pandas    \n",
-    "1   , # PySpak    \n",
-    "0.45, # Python    \n",
-    "1   , # Python    \n",
-    "1   , # SQL       \n",
-    "0.3 , # VBA       \n",
-    "1   , # VBA      \n",
+    "year_step = 1 / (2023 - 2011)\n",
+    "\n",
+    "def get_x_pos(last_year_used):\n",
+    "    \n",
+    "    assert isinstance(last_year_used, int), \"last_year_used should be an int\"\n",
+    "    \n",
+    "    return (last_year_used - 2011) * year_step\n",
+    "\n",
+    "\n",
+    "x_year = [\n",
+    "2011, # C     \n",
+    "2014, # C     \n",
+    "2018, # GScript   \n",
+    "2023, # GScript   \n",
+    "2023, # HTML/CSS  \n",
+    "2023, # JavaScript\n",
+    "2013, # Matlab    \n",
+    "2023, # Matplotlib\n",
+    "2023, # Numpy     \n",
+    "2023, # Pandas    \n",
+    "2023, # PySpak    \n",
+    "2018, # Python    \n",
+    "2023, # Python    \n",
+    "2023, # SQL       \n",
+    "2015, # VBA       \n",
+    "2023, # VBA      \n",
     "]\n",
+    "\n",
+    "x = [get_x_pos(x_index) for x_index in x_year]\n",
+    "\n",
     "y = [\n",
     "0.5 , # C        \n",
     "0.9 , # C \n",
@@ -224,7 +236,7 @@
     "1   , # GScript   \n",
     "0.9 , # HTML/CSS  \n",
     "0.8 , # JavaScript\n",
-    "0.5 , # Matlab    \n",
+    "0.37 , # Matlab    \n",
     "0.3 , # Matplotlib\n",
     "0.25, # Numpy     \n",
     "0.2 , # Pandas    \n",
@@ -247,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -357,21 +369,21 @@
           ],
           "pad": 15,
           "x": [
-           0.01,
-           0.2,
-           0.6,
+           0,
+           0.25,
+           0.5833333333333333,
            1,
            1,
            1,
-           0.15,
+           0.16666666666666666,
            1,
            1,
            1,
            1,
-           0.45,
+           0.5833333333333333,
            1,
            1,
-           0.3,
+           0.3333333333333333,
            1
           ],
           "y": [
@@ -381,7 +393,7 @@
            1,
            0.9,
            0.8,
-           0.5,
+           0.37,
            0.3,
            0.25,
            0.2,
